# archer

./: .cproject  .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  CREDITS  CREDITS.txt  LICENSE  README.md  README.org
ci/: DockerFile.ubuntu-16.04
cmake/: ArcherTesting.cmake  FindArcher.cmake  FindLLVM.cmake  FindOmp.cmake  FindOmpt.cmake  FindOmptTsan.cmake  LibarcherUtils.cmake  archer_macros.cmake  config-ix.cmake  has_ompt.guess
hooks/: README.md  post-commit  pre-commit
include/archer/: ArcherDDA.h  ArcherPlugin.h  Common.h  CommonLLVM.h  InstructionContext.h  LinkAllPasses.h  RegisterPasses.h  Util.h  Util.h~
lib/: Archer.cpp  CMakeLists.txt
lib/Analysis/: ArcherDDA.cpp  InstructionContext.cpp  LoadsStoresList.cpp
lib/Support/: MonotonicIdGen.cpp  RegisterPasses.cpp  Util.cpp
lib/Transforms/Instrumentation/: InstrumentParallel.cpp
plugin/: ArcherPlugin.cpp  CMakeLists.txt
resources/images/: uofu_logo.eps
rtl/: CMakeLists.txt  archer_report.cpp  counter.cpp  counter.h  deduplicate_report.cpp  ftsan.c  ompt-tsan.cpp  pb_report.proto  suppressions.txt  tsanToProtobuf.cpp  tsanToProtobuf.hpp
test/: CMakeLists.txt  deflake.bash  lit.cfg  lit.site.cfg.in
test/OMPT/: callback.h  ompt-signal.h
test/OMPT/parallel/: nested.c  nested_lwt.c  nested_serialized.c  no_thread_num_clause.c  normal.c  parallel_if0.c  serialized.c
test/OMPT/tasks/: dependences.c  explicit_task.c  task_in_joinbarrier.c
test/barrier/: barrier.c
test/critical/: critical.c  lock-nested.c  lock.c
test/ompt/: callback.h
test/parallel/: parallel-firstprivate.c  parallel-simple.c  parallel-simple2.c  to_string.cpp
test/races/: critical-unrelated.c  lock-nested-unrelated.c  lock-unrelated.c  parallel-simple.c  task-dependency.c  task-taskgroup-unrelated.c  task-taskwait-nested.c  task-two.c
test/reduction/: parallel-reduction-nowait.c  parallel-reduction.c
test/task/: task-barrier.c  task-create.c  task-dependency.c  task-taskgroup-nested.c  task-taskgroup.c  task-taskwait-nested.c  task-taskwait.c
test/worksharing/: ordered.c
tools/: CMakeLists.txt  ar  archer-bl.cpp  clang-archer  clang-archer++  clang-archer++.in  clang-archer.in  ranlib
